<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aga.filmowo.AddMovie">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/edName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"
            android:drawableBottom="@color/colorAccent"
            android:ems="10"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/yearOfProduction"/>
        <EditText
            android:id="@+id/edYearOfProduction"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dateOfPremiere"/>
        <EditText
            android:id="@+id/edDateOfPremiere"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description"/>
        <EditText
            android:id="@+id/edDescription"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
    </TableRow>
    <Button
        android:id="@+id/bSave"
        android:text="@string/button_save"
        android:layout_gravity="bottom"/>
</TableLayout>